extract github config from code to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+Github.client.id=8a07ca5f64798513fb48
+Github.client.secret=f1a431f71801fa3d4920755d88187ac56ac6dd6f
+Github.redirect.url=http://localhost:8080/callback
 
